repo/gstoresales/02-service-web.yaml
---
# Source: gstoresales/templates/02-service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: gstore-sales
  # namespace: gan2-app-ns
  labels:
    main-app: gstore-application
    app: gstore-sales
  annotations:
    mcm.ibm.com/service-discovery: "{}"
spec:
  type: ClusterIP
  ports:
    - name: my-http
      port: 8080
      targetPort: 8080
  selector:
    main-app: gstore-application
    app: gstore-sales
